# learning-and-playground

./: Docker-swarm.md  Loki.md  OpenAPI.yaml  TypeSpec.md  aiogram.py  mise.toml  mise.toml.example  rxjs.md  wireguard-howto.md
cython/: pyproject.toml
cython/01-hello/: __main__.py  setup.py
cython/01-hello/hello/: hello.py  primes.c
python/graphene/: pyproject.toml
python/kivy/: 02-paint.kv  03-manual.kv  03-manual.py  pyproject.toml
python/python-telegram/: play.py  pyproject.toml
python/tartiflette/: 01-intro.py  pyproject.toml
rabbitmq/01-hello/: pyproject.toml
rust/: Cargo.toml  Makefile  README-gen-file-list.sh  README.md  README.md-HEADER  README.md-files  README.md-files.seen  README.md-gen.py  mise.toml
rust-embedded-esp32/tutorials/a01-no_std-blinky-button/: Cargo.toml  README.md  diagram.json  wokwi.toml
rust-embedded-esp32/tutorials/a01-no_std-blinky-button/.cargo/: config.toml
rust-embedded-esp32/tutorials/a03-no_std-http-client/: Cargo.toml  wokwi.toml
rust-embedded-esp32/tutorials/a03-no_std-http-client/.cargo/: config.toml
rust-embedded-esp32/tutorials/b05-pir-sensor/: Cargo.toml  diagram.json  wokwi.toml
rust-embedded-esp32/tutorials/b10-i2c-oled-display/: Cargo.toml  README.md  diagram.json  wokwi.toml
rust-embedded-esp32/tutorials/b10-i2c-oled-display/.cargo/: config.toml
rust-embedded-esp32/tutorials/b11-adc-thermistor/: Cargo.toml
rust-embedded-esp32/tutorials/b11-adc-thermistor/.cargo/: config.toml
rust-embedded-esp32/tutorials/b12-spi-sdcard/: Cargo.toml  wokwi.toml
rust-embedded-esp32/tutorials/b15-bluetooth/: Cargo.toml  wokwi.toml
rust-embedded-esp32/tutorials/b15-bluetooth/src/: ble.rs
rust-embedded-esp32/tutorials/b17-lcd-i2c/: Cargo.toml
rust-embedded-esp32/tutorials/b18-eink/: Cargo.toml
rust/embedded/: README-more.md  README.md
rust/embedded/a01-led-roulette/: .envrc  Cargo.toml  README.md  rust-toolchain.toml
rust/embedded/a01-led-roulette/.cargo/: config.toml
rust/embedded/a01-led-roulette/src/: main.rs
rust/embedded/a01-rust-on-esp32/: Cargo.toml  README.md  cfg.toml
rust/embedded/a01-rust-on-esp32/src/: main.rs
rust/embedded/a02-rust-on-esp32-std/: Cargo.toml  README.md  build.rs  cfg.toml  cfg.toml.example
rust/embedded/a02-rust-on-esp32-std/.cargo/: config.toml
rust/embedded/a02-rust-on-esp32-std/src/: lib.rs  main.rs
rust/embedded/a03-esp32-serial/: Cargo.toml  README.md
rust/embedded/a03-esp32-serial/src/: main.rs
rust/embedded/a04-i2c-display/: Cargo.toml  README.md
rust/embedded/a04-i2c-display/.cargo/: config.toml
rust/embedded/a04-i2c-display/src/: main.rs
rust/rust/: README-more.md  libraries.md
rust/rust/a01-hello/: Cargo.toml  main.rs
rust/rust/a01-hello/src/: main.rs
rust/rust/a02-guessing-game/: Cargo.toml
rust/rust/a02-guessing-game/src/: main.rs
rust/rust/a02_guessing_game/: Cargo.toml
rust/rust/a02_guessing_game/src/: main.rs
rust/rust/a03-variables/: Cargo.toml
rust/rust/a03-variables/src/: main.rs
rust/rust/a03_variables/: Cargo.toml
rust/rust/a03_variables/src/: main.rs
rust/rust/a04-control-flow/: Cargo.toml
rust/rust/a04-control-flow/src/: main.rs
rust/rust/a04_flow/: Cargo.toml
rust/rust/a04_flow/src/: main.rs
rust/rust/a05-ownership/: README.md  main  main.rs
rust/rust/a05_ownership/: README.md
rust/rust/a06-struct/: Cargo.toml
rust/rust/a06-struct/src/: main.rs
rust/rust/a06_structs/: Cargo.toml
rust/rust/a06_structs/src/: main.rs
rust/rust/a07-enum/: Cargo.toml
rust/rust/a07-enum/src/: main.rs
rust/rust/a07_enums_and_patterns/: Cargo.toml
rust/rust/a07_enums_and_patterns/src/: main.rs
rust/rust/a08-packages/: Cargo.toml  README.md
rust/rust/a08-packages/src/: garden.rs  lib.rs  main.rs
rust/rust/a08_packages/: Cargo.toml  README.md
rust/rust/a08_packages/src/: garden.rs  lib.rs  main.rs
rust/rust/a09-collections/: Cargo.toml
rust/rust/a09-collections/src/: main.rs
rust/rust/a09_collections/: Cargo.toml
rust/rust/a09_collections/src/: main.rs
rust/rust/a10-errors/: Cargo.toml
rust/rust/a10-errors/src/: main.rs
rust/rust/a10_errors/: Cargo.toml
rust/rust/a10_errors/src/: main.rs
rust/rust/a11-generics-traits-lifetimes/: Cargo.toml
rust/rust/a11-generics-traits-lifetimes/src/: main.rs
rust/rust/a11_generics_traits_lifetimes/: Cargo.toml
rust/rust/a11_generics_traits_lifetimes/src/: main.rs
rust/rust/a12-tests/: Cargo.toml
rust/rust/a12-tests/src/: lib.rs
rust/rust/a12-tests/tests/: common.rs  integration_test.rs
rust/rust/a12_tests/: Cargo.toml
rust/rust/a12_tests/src/: lib.rs
rust/rust/a12_tests/tests/: integration_test.rs
rust/rust/a13-command-line-app/: Cargo.toml
rust/rust/a13-command-line-app/src/: lib.rs  main.rs
rust/rust/a13_cli_app/: Cargo.toml
rust/rust/a13_cli_app/src/: lib.rs  main.rs
rust/rust/a14-functional/: Cargo.toml
rust/rust/a14-functional/src/: main.rs
rust/rust/a14_functional/: Cargo.toml
rust/rust/a14_functional/src/: main.rs
rust/rust/a15-cargo/: Cargo.toml
rust/rust/a15-cargo/adder/: Cargo.toml
rust/rust/a15-cargo/src/: lib.rs  main.rs
rust/rust/a15_cargo/: Cargo.toml
rust/rust/a15_cargo/adder/: Cargo.toml
rust/rust/a15_cargo/src/: lib.rs  main.rs
rust/rust/a16-smart-pointers/: Cargo.toml
rust/rust/a16-smart-pointers/src/: main.rs
rust/rust/a16_smart_pointers/: Cargo.toml
rust/rust/a16_smart_pointers/src/: main.rs
rust/rust/a17-concurrency/: Cargo.toml
rust/rust/a17-concurrency/src/: README.md  main.rs
rust/rust/a17_concurrency/: Cargo.toml
rust/rust/a17_concurrency/src/: main.rs
rust/rust/a18-async-await/: Cargo.toml
rust/rust/a18_oop/: Cargo.toml
rust/rust/a19-oop/: Cargo.toml
rust/rust/a19_match/: Cargo.toml
rust/rust/a20-match/: Cargo.toml
rust/rust/a20_advanced/: Cargo.toml
rust/rust/a21-advanced/: Cargo.toml
rust/rust/a21_appendix/: Cargo.toml
rust/rust/a22-appendix/: Cargo.toml
rust/rust/a22_rust_by_example/: Cargo.toml
rust/rust/b01-rust-by-example/: Cargo.toml
rust/rust/b01_rust_by_example/: Cargo.toml
sqlalchemy-asyncio/: docker-compose.yml  pyproject.toml
(+561 files in other folders)
