[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Mark Vartanyan <kolypto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tartiflette = "^1.4.1"
tartiflette-asgi = "^0.12.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
