[package]
edition      = "2024"
name         = "a01-no_std-blinky-button"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "a01-no_std-blinky-button"
path = "./src/bin/main.rs"

[dependencies]
# Enabled "unstable" feature because it supports Delay
esp-hal = { version = "=1.0.0-rc.1", features = ["esp32c3", "unstable"] }
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32c3"] }
critical-section = "1.2.0"
esp-println = { version = "0.16.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.18.0", features = ["esp32c3", "println", "panic-handler"] }
defmt = "1.0.1"



[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
