[package]
edition      = "2024"
name         = "a03-no_std-http-client"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "a03-no_std-http-client"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "=1.0.0-rc.1", features = ["esp32c3", "unstable"] }

esp-rtos = { version = "0.1.1", features = [
  "esp32c3", "esp-alloc", "esp-radio",
] }

esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32c3"] }

critical-section = "1.2.0"
embedded-io = "0.6.1"
# embedded-io = "0.7.1"  # Can't include the newer version because "blocking-network-stack" depends on 0.6.1
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.0", features = [
  "esp32c3", "panic-handler", "println",
] }
esp-println = { version = "0.16.0", features = ["esp32c3"] }
esp-radio = { version = "0.16.0", features = [
  "esp-alloc", "esp32c3",
  "smoltcp", "unstable", "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet", "multicast",
  "proto-dhcpv4", "proto-dns", "proto-ipv4",
  "socket-dns", "socket-icmp", "socket-raw", "socket-tcp", "socket-udp",
] }
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e" }
# esp-wifi = { version = "0.15.1", features = ["esp32c3", "esp-alloc", "smoltcp", "wifi"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
