[package]
edition      = "2024"
name         = "b12-spi-sdcard"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "b12-spi-sdcard"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["defmt", "esp32c3", "unstable"] }


defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c3"] }

critical-section = "1.2.0"
esp-backtrace = { version = "0.18.1", features = [
  # "defmt",
  "println",
  "esp32c3",
  "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32c3"] }
embedded-hal-bus = "0.3.0"
embedded-sdmmc = { version = "0.9.0", features = ["defmt-log"], default-features = false }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
