[package]
edition      = "2024"
name         = "b18-eink"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "b18-eink"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32c3", "unstable"] }

esp-rtos = { version = "0.2.0", features = ["defmt", "embassy", "esp32c3"] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c3"] }

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32c3",
  "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32c3"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3.0"
tinybmp = "0.6.0"

# NOTE: Use the "main" branch because they have Color traits implemented there. See `color.rs`.
# epd-waveshare = { version = "0.6.0", features = ["graphics"] }
epd-waveshare = { git="https://github.com/caemor/epd-waveshare.git", features = ["graphics"]}


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
