[package]
name = "a10-errors"
version = "0.1.0"
edition = "2024"

[profile.release]
# Default panic!() behavior: unwinding:
#   Rust walks back up the stack and cleans up the data from each function.
# This is expensive.
# Alternative: immediate aborting, with no cleaning up.
# To be used when you need a binary to be as small as possible.
# Difference:
panic = 'abort'

[dependencies]
