# crate medata
# used when publishing to crates.io:
# $ cargo publish
[package]
name = "a15_cargo"
version = "0.1.0"
edition = "2021"

license = "MIT"  # open-source :)
description = "A crate that does nothing"

# "Release profiles": different configurations for compiling code:
# * "dev": for `cargo build`.
# * "release": for `cargo build --release`.
[profile.dev]
# The number of optimizations Rust will apply to the code.
# More optimizations extends compiling time.
opt-level = 0  # the default

[profile.release]
opt-level = 3  # the default




# A "workspace" is a set of packages that share the same `Cargo.lock` and output directory.
# It you to split one large lib.rs into smaller packages.
# Run this to create a binary sub-crate:
# $ cargo new adder --lib
#
# The workspace has one target directory.
# Compiled artifacts will end up in ./target
[workspace]
members = [
    # sub-library.
    # Generate it with:
    # $ cargo new adder --lib
    "adder"
]



# Dependencies
[dependencies]
# Use our sub-library as a dependency :)
adder = { path = "./adder" }


# Dependencies only for development
[dev-dependencies]
# Extends standard `assert_eq!()` with colorful diff
pretty_assertions = "1"